@@ -1,0 +1,3 @@
+[10.00]begin
+[20.00]middle
+[30.00]end
